--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,119 @@
     </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/rl_sub_layout"
+    android:layout_below="@id/cv_toolbar">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:id="@+id/iv_weather_bg"
+            android:src="@drawable/snow_bg">
+
+        </ImageView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_large"
+            android:layout_marginStart="@dimen/padding_x_large"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_date_and_time"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_large"
+                android:text="@string/demo_date"></TextView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_large"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_day_max_temp"
+                    android:layout_weight="3"
+                    android:textColor="@color/white"
+                    android:text="@string/day"
+                    android:textSize="@dimen/text_large"></TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_day_mim_temp"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:text="@string/day"
+                    android:textSize="@dimen/text_large"></TextView>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_large"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_temp"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:text="@string/main_temp"
+                    android:textSize="@dimen/text_super_large"></TextView>
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="@dimen/padding_large"
+                    android:layout_marginEnd="@dimen/padding_large"
+                    android:id="@+id/iv_weather_icon"
+                    android:src="@drawable/clear"></ImageView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_large"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_feels_like"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:text="@string/feels_alike"
+                    android:textSize="@dimen/text_large"></TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_weather_type"
+                    android:layout_weight="3"
+                    android:textColor="@color/white"
+                    android:text="@string/weather_type"
+                    android:textSize="@dimen/text_large"></TextView>
+
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </FrameLayout>
+</RelativeLayout>
 </RelativeLayout>
 
